--- a/README.hbs
+++ b/README.hbs
@@ -1,5 +1,10 @@
 <p align="center"><img src="https://raw.githubusercontent.com/ashthornton-gc/asscroll/master/asscroll.png"></p>
 
+<p align="center">
+    <a href="https://www.npmjs.com/package/@ashthornton/asscroll"><img src="https://img.shields.io/npm/v/@ashthornton/asscroll?color=%23F7894A" alt="NPM Version"></a>
+    <a href="https://www.jsdelivr.com/package/npm/@ashthornton/asscroll"><img alt="jsDelivr hits (npm)" src="https://img.shields.io/jsdelivr/npm/hm/@ashthornton/asscroll?color=%23F7894A"></a>
+</p>
+
 <h3 align="center"><strong>ASScroll is a hybrid smooth scroll setup that combines the<br>performance gains of virtual scroll with the reliability of native scroll.</strong></h3>
 
 <p align="center" style="padding: 0 15%">This setup aims to be a lightweight solution that provides a consistent smooth scrolling experience across all platforms, devices and hardware.</p>
@@ -40,7 +45,7 @@ Demos
 
 
 # Install
-`npm i @ashthornton/asscroll` or `yarn add @ashthornton/asscroll`
+`npm i --save @ashthornton/asscroll` or `yarn add @ashthornton/asscroll`
 
 # Zero Config Setup
 
