update scrollbar controller reference

--- a/docs/README.hbs
+++ b/docs/README.hbs
@@ -136,3 +136,11 @@ window.addEventListener('resize', () => {
 
 asscroll.enable()
 ```
+
+Touch Devices
+===
+
+ASScroll provides three options for handling itself on touch devices:
+- Disabled completely, falling back to native scroll whilst still providing scroll position properties
+- Continue to transform the scroll elements with an ease setting specifically for touch devices
+- Utilise the `scrollTop` value of the container element when used in conjunction with CSS that prevents resizes and browser UI from toggling
