--- a/css/touch.css
+++ b/css/touch.css
@@ -3,13 +3,10 @@
     top: 0;
     left: 0;
     right: 0;
-    bottom: -1px;
+    bottom: -0.1px;
     overflow-y: auto;
-    overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
 }
 
-.asscroll-touch .asscroll-wrapper {
-    overflow: hidden !important;
-    margin-bottom: 1px;
+.asscroll-touch [data-scroll] {
+    margin-bottom: 0.1px;
 }
