--- a/docs/README.hbs
+++ b/docs/README.hbs
@@ -13,10 +13,10 @@
 ---
 
 #### Advantages over pure virtual scroll:
-- Accessibility / keyboard friendly (without overriding the browser's native scroll)
+- Accessible and keyboard friendly (without overriding the browser's native scroll)
 - No special cases to cater for when handling manual key detection (i.e. pressing space in a form input)
 - Doesn't stop working when hovering over an iframe
-- Handles hardware that doesn't fire the 'wheel' event i.e. Windows trackpads in Edge + IE
+- Handles hardware that doesn't fire the 'wheel' event i.e. Windows trackpads in Legacy Edge
 - No lag between DOM and WebGL elements on mobile, whilst retaining native inertia scroll
 
 #### Other Features:
@@ -160,3 +160,5 @@ ASScroll provides three options for handling itself on touch devices via the `to
 - `'scrollTop'`: Utilise the `scrollTop` value of the container element when used in conjunction with CSS that prevents resizes and browser UI from toggling
 
 The `scrollTop` option is primarily used for syncing WebGL content to the scroll position on mobile, without overriding the native inertia scroll. Some CSS will be injected automatically when this option is enabled. This CSS can be found [here](https://github.com/ashthornton/asscroll/blob/master/css/scrollTop.css).
+
+`touchScrollType: transform` will also achieve DOM and WebGL content sync but is more expensive.
