--- a/docs/README.hbs
+++ b/docs/README.hbs
@@ -1,4 +1,4 @@
-<p align="center"><img src="https://raw.githubusercontent.com/ashthornton/asscroll/release/2.0.0/docs/banner.jpg"></p>
+<p align="center"><img src="https://raw.githubusercontent.com/ashthornton/asscroll/master/docs/banner.jpg"></p>
 
 <p align="center">
     <a href="https://www.npmjs.com/package/@ashthornton/asscroll"><img src="https://img.shields.io/npm/v/@ashthornton/asscroll?color=%23F7894A" alt="NPM Version"></a>
@@ -33,6 +33,9 @@ Demos
 - [Options Demo](https://codepen.io/ashthornton/pen/YzWXZqL?editors=1010)
 - [Using GSAP's ScrollTrigger with ASScroll](https://codepen.io/ashthornton/pen/PoZRwPW)
 - [Using PJAX Navigation (Highway) with ASScroll](https://codepen.io/ashthornton/project/editor/AypMLG)
+- [Touch-friendly DOM/WebGL Sync](https://codepen.io/ashthornton/pen/YzZzaVK)
+
+_Full showcase site coming soon_
 
 ### Sites using ASScroll
 - [Superlist](https://superlist.com/)
@@ -53,6 +56,7 @@ Table of contents
    * [External RAF Usage](#usage-with-external-requestanimationframe)
    * [External Resize Usage](#usage-with-external-window-resize)
    * [Touch Devices](#touch-devices)
+   * [Changelog](#changelog)
 <!--te-->
 
 ---
@@ -162,3 +166,6 @@ ASScroll provides three options for handling itself on touch devices via the `to
 The `scrollTop` option is primarily used for syncing WebGL content to the scroll position on mobile, without overriding the native inertia scroll. Some CSS will be injected automatically when this option is enabled. This CSS can be found [here](https://github.com/ashthornton/asscroll/blob/master/css/scrollTop.css).
 
 `touchScrollType: transform` will also achieve DOM and WebGL content sync but is more expensive.
+
+## Changelog
+[View Changelog](https://github.com/ashthornton/asscroll/blob/master/CHANGELOG.md)
