--- a/docs/README.hbs
+++ b/docs/README.hbs
@@ -35,8 +35,6 @@ Demos
 - [Using PJAX Navigation (Highway) with ASScroll](https://codepen.io/ashthornton/project/editor/AypMLG)
 - [Touch-friendly DOM/WebGL Sync](https://codepen.io/ashthornton/pen/YzZzaVK)
 
-_Full showcase site coming soon_
-
 ### Sites using ASScroll
 - [Superlist](https://superlist.com/)
 - [Lewa House](https://lewahouse.com/)
@@ -169,3 +167,5 @@ The `scrollTop` option is primarily used for syncing WebGL content to the scroll
 
 ## Changelog
 [View Changelog](https://github.com/ashthornton/asscroll/blob/master/CHANGELOG.md)
+
+[![Verified on Openbase](https://badges.openbase.com/js/verified/@ashthornton/asscroll.svg?style=openbase&token=WmQF8PcdmBheXMjTKPy59HRexmMzyckLHugup8l88mU=)](https://openbase.com/js/@ashthornton/asscroll?utm_source=embedded&amp;utm_medium=badge&amp;utm_campaign=rate-badge)
